fix event title wrapping

--- a/src/GameLog.scss
+++ b/src/GameLog.scss
@@ -495,6 +495,7 @@ $halfGap: .25rem;
                             margin-bottom: .25rem;
                             margin-left: .5rem;
 
+                            flex-wrap: nowrap;
                             flex-grow: 1;
 
                             &:last-of-type {
@@ -505,6 +506,8 @@ $halfGap: .25rem;
                                 flex-grow: 1;
 
                                 span {
+                                    white-space: break-spaces;
+
                                     color: $color-active-background;
                                     background: $color-active-text;
                                 }
